--- a/static/ReminderSite/Views/Home/Register.cshtml
+++ b/static/ReminderSite/Views/Home/Register.cshtml
@@ -45,6 +45,7 @@
                             <input asp-for="UserName" class="form-control" />
                             <span asp-validation-for="UserName" class="text-danger"></span>
                         </div>
+                    @ViewBag.message
                         <div class="form-group">
                             <label asp-for="Email" class="control-label"></label>
                             <input asp-for="Email" class="form-control" />
