--- a/static/ReminderSite/Views/Home/Login.cshtml
+++ b/static/ReminderSite/Views/Home/Login.cshtml
@@ -20,7 +20,7 @@
     <title></title>
 </head>
 <body>
-    <form asp-action="Login">
+    <form method="post" asp-action="Login">
         <center>
             <h1>LOGIN</h1><br /><br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -37,6 +37,7 @@
             </div>
             @ViewBag.message
             @ViewBag.message1
+            @ViewBag.message3
             <div class="form-group">
                 <input type="submit" value="Login" class="btn btn-primary" />
             </div>
